<resources>
    <string name="app_name">Test Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="repo_id">Repository Id</string>
    <string name="repo_name">Repository Name</string>
    <string name="repo_full_name">Repository Full Name</string>

    <string name="repo_owner_name">Owner Name</string>
    <string name="repo_description">Repo Description</string>
    <string name="updated_at">25 July 2019</string>
    <string name="no_data_found">No Data Found</string>
</resources>