<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/repo_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_stroke1"
            android:gravity="center"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="15dp"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <ImageView
                    android:id="@+id/photo_owner"
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_person_circle"
                    app:layout_constraintBottom_toTopOf="@id/repo_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.98"
                    app:layout_constraintStart_toEndOf="@+id/repo_owner_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="ContentDescription,HardcodedText" />

                <TextView
                    android:id="@+id/repo_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/repo_owner_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/repo_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/repo_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/repo_description"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@id/updated_at"
                    app:layout_constraintEnd_toStartOf="@+id/photo_owner"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repo_owner_name" />

                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/updated_at"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repo_details"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>